Added create note activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
- <?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -23,21 +23,23 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/new_note"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginHorizontal="30dp"
             android:padding="5dp"
-            android:text="New Note"
+            android:text="@string/new_note"
             android:textSize="18sp" />
 
         <Button
+            android:id="@+id/delete_note"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginHorizontal="30dp"
             android:padding="5dp"
-            android:text="Delete Note"
+            android:text="@string/delete_note"
             android:textSize="18sp" />
 
     </LinearLayout>
