--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,12 +10,12 @@
         android:layout_height="50dp" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvNotes"
+        android:id="@+id/rv_notes"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:padding="10dp"
-        android:textSize="36sp"/>
+        android:textSize="36sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
