--- a/app/src/main/res/layout/delete_note_row.xml
+++ b/app/src/main/res/layout/delete_note_row.xml
@@ -3,15 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp" >
+    android:layout_height="wrap_content" >
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="0dp"
         android:layout_weight="5"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp" >
+        android:paddingBottom="10dp" >
 
         <TextView
             android:id="@+id/title"
