--- a/app/src/main/res/layout/note_row.xml
+++ b/app/src/main/res/layout/note_row.xml
@@ -4,21 +4,21 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp" >
+    android:paddingBottom="10dp">
 
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="30sp"
-        android:text="Title"/>
+        android:text="@string/title"/>
 
     <TextView
         android:id="@+id/note"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="24sp"
-        android:text="Note"
+        android:text="@string/note"
         android:textColor="@color/grey"/>
 
 </LinearLayout>
